// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> renders 0% correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProgressBar
    backgroundColor="near-white"
    color="black"
    large={false}
    percent={0}
    percentage={0}
    pill={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="w-100"
      >
        <div
          className="bg-near-white h1  overflow-hidden w-100"
        >
          <div
            className="bg-black h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>
      </div>,
      "className": "progress-bar w-100",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="bg-near-white h1  overflow-hidden w-100"
        >
          <div
            className="bg-black h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>,
        "className": "w-100",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="bg-black h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />,
          "className": "bg-near-white h1  overflow-hidden w-100",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "bg-black h1  shadow-2",
            "style": Object {
              "width": "0%",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w-100"
        >
          <div
            className="bg-near-white h1  overflow-hidden w-100"
          >
            <div
              className="bg-black h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />
          </div>
        </div>,
        "className": "progress-bar w-100",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="bg-near-white h1  overflow-hidden w-100"
          >
            <div
              className="bg-black h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />
          </div>,
          "className": "w-100",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="bg-black h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />,
            "className": "bg-near-white h1  overflow-hidden w-100",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "bg-black h1  shadow-2",
              "style": Object {
                "width": "0%",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ProgressBar /> renders 100% correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProgressBar
    backgroundColor="near-white"
    color="black"
    large={false}
    percent={0}
    percentage={100}
    pill={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="w-100"
      >
        <div
          className="bg-near-white h1  overflow-hidden w-100"
        >
          <div
            className="bg-black h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>
      </div>,
      "className": "progress-bar w-100",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="bg-near-white h1  overflow-hidden w-100"
        >
          <div
            className="bg-black h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>,
        "className": "w-100",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="bg-black h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />,
          "className": "bg-near-white h1  overflow-hidden w-100",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "bg-black h1  shadow-2",
            "style": Object {
              "width": "0%",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w-100"
        >
          <div
            className="bg-near-white h1  overflow-hidden w-100"
          >
            <div
              className="bg-black h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />
          </div>
        </div>,
        "className": "progress-bar w-100",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="bg-near-white h1  overflow-hidden w-100"
          >
            <div
              className="bg-black h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />
          </div>,
          "className": "w-100",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="bg-black h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />,
            "className": "bg-near-white h1  overflow-hidden w-100",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "bg-black h1  shadow-2",
              "style": Object {
                "width": "0%",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ProgressBar /> renders custom background color 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProgressBar
    backgroundColor="near-white"
    color="blue"
    large={false}
    percent={0}
    pill={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="w-100"
      >
        <div
          className="bg-near-white h1  overflow-hidden w-100"
        >
          <div
            className="bg-blue h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>
      </div>,
      "className": "progress-bar w-100",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="bg-near-white h1  overflow-hidden w-100"
        >
          <div
            className="bg-blue h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>,
        "className": "w-100",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="bg-blue h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />,
          "className": "bg-near-white h1  overflow-hidden w-100",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "bg-blue h1  shadow-2",
            "style": Object {
              "width": "0%",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w-100"
        >
          <div
            className="bg-near-white h1  overflow-hidden w-100"
          >
            <div
              className="bg-blue h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />
          </div>
        </div>,
        "className": "progress-bar w-100",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="bg-near-white h1  overflow-hidden w-100"
          >
            <div
              className="bg-blue h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />
          </div>,
          "className": "w-100",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="bg-blue h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />,
            "className": "bg-near-white h1  overflow-hidden w-100",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "bg-blue h1  shadow-2",
              "style": Object {
                "width": "0%",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ProgressBar /> renders custom color 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProgressBar
    backgroundColor="near-white"
    color="blue"
    large={false}
    percent={0}
    pill={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="w-100"
      >
        <div
          className="bg-near-white h1  overflow-hidden w-100"
        >
          <div
            className="bg-blue h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>
      </div>,
      "className": "progress-bar w-100",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="bg-near-white h1  overflow-hidden w-100"
        >
          <div
            className="bg-blue h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>,
        "className": "w-100",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="bg-blue h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />,
          "className": "bg-near-white h1  overflow-hidden w-100",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "bg-blue h1  shadow-2",
            "style": Object {
              "width": "0%",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w-100"
        >
          <div
            className="bg-near-white h1  overflow-hidden w-100"
          >
            <div
              className="bg-blue h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />
          </div>
        </div>,
        "className": "progress-bar w-100",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="bg-near-white h1  overflow-hidden w-100"
          >
            <div
              className="bg-blue h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />
          </div>,
          "className": "w-100",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="bg-blue h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />,
            "className": "bg-near-white h1  overflow-hidden w-100",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "bg-blue h1  shadow-2",
              "style": Object {
                "width": "0%",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ProgressBar /> renders defaults 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProgressBar
    backgroundColor="near-white"
    color="black"
    large={false}
    percent={0}
    pill={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="w-100"
      >
        <div
          className="bg-near-white h1  overflow-hidden w-100"
        >
          <div
            className="bg-black h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>
      </div>,
      "className": "progress-bar w-100",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="bg-near-white h1  overflow-hidden w-100"
        >
          <div
            className="bg-black h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>,
        "className": "w-100",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="bg-black h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />,
          "className": "bg-near-white h1  overflow-hidden w-100",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "bg-black h1  shadow-2",
            "style": Object {
              "width": "0%",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w-100"
        >
          <div
            className="bg-near-white h1  overflow-hidden w-100"
          >
            <div
              className="bg-black h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />
          </div>
        </div>,
        "className": "progress-bar w-100",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="bg-near-white h1  overflow-hidden w-100"
          >
            <div
              className="bg-black h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />
          </div>,
          "className": "w-100",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="bg-black h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />,
            "className": "bg-near-white h1  overflow-hidden w-100",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "bg-black h1  shadow-2",
              "style": Object {
                "width": "0%",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ProgressBar /> renders large version correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProgressBar
    backgroundColor="near-white"
    color="black"
    large={true}
    percent={0}
    pill={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="w-100"
      >
        <div
          className="bg-near-white h2  overflow-hidden w-100"
        >
          <div
            className="bg-black h2  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>
      </div>,
      "className": "progress-bar w-100",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="bg-near-white h2  overflow-hidden w-100"
        >
          <div
            className="bg-black h2  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>,
        "className": "w-100",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="bg-black h2  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />,
          "className": "bg-near-white h2  overflow-hidden w-100",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "bg-black h2  shadow-2",
            "style": Object {
              "width": "0%",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w-100"
        >
          <div
            className="bg-near-white h2  overflow-hidden w-100"
          >
            <div
              className="bg-black h2  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />
          </div>
        </div>,
        "className": "progress-bar w-100",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="bg-near-white h2  overflow-hidden w-100"
          >
            <div
              className="bg-black h2  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />
          </div>,
          "className": "w-100",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="bg-black h2  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />,
            "className": "bg-near-white h2  overflow-hidden w-100",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "bg-black h2  shadow-2",
              "style": Object {
                "width": "0%",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ProgressBar /> renders rounded version correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProgressBar
    backgroundColor="near-white"
    color="black"
    large={false}
    percent={0}
    pill={false}
    rounded={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="w-100"
      >
        <div
          className="bg-near-white h1  overflow-hidden w-100"
        >
          <div
            className="bg-black h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>
      </div>,
      "className": "progress-bar w-100",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="bg-near-white h1  overflow-hidden w-100"
        >
          <div
            className="bg-black h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>,
        "className": "w-100",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="bg-black h1  shadow-2"
            style={
              Object {
                "width": "0%",
              }
            }
          />,
          "className": "bg-near-white h1  overflow-hidden w-100",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "bg-black h1  shadow-2",
            "style": Object {
              "width": "0%",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w-100"
        >
          <div
            className="bg-near-white h1  overflow-hidden w-100"
          >
            <div
              className="bg-black h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />
          </div>
        </div>,
        "className": "progress-bar w-100",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="bg-near-white h1  overflow-hidden w-100"
          >
            <div
              className="bg-black h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />
          </div>,
          "className": "w-100",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="bg-black h1  shadow-2"
              style={
                Object {
                  "width": "0%",
                }
              }
            />,
            "className": "bg-near-white h1  overflow-hidden w-100",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "bg-black h1  shadow-2",
              "style": Object {
                "width": "0%",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
